--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="dropdown">
         <button class="dropButton" (click)="clickDropDownButton = !clickDropDownButton">Dropdown</button>
-        <div [(appDropdown)]="clickDropDownButton" class="dropdown-content">
+        <div [appDropdown]="clickDropDownButton" class="dropdown-content">
             <div class="dropdown-content-inner">
                 <a href="#">Link 1</a>
                 <a href="#">Link 2</a>
